fix spacing

--- a/src/components/AboutSection/AboutSection.module.scss
+++ b/src/components/AboutSection/AboutSection.module.scss
@@ -22,7 +22,7 @@
 		.firstRowLeft {
 			width: 40%;
 			.imgWrapper {
-				margin-top: -3rem;
+				margin-top: -2rem;
 				@include underlay(underlayedImg, 619px);
 				.underlayedImg {
 					max-height: 619px;
@@ -34,7 +34,9 @@
 			width: 50%;
 			@include flexbox(column);
 			@include justify-content(space-between);
-
+			h2 {
+				margin-top: pxToRem(70px);
+			}
 			p {
 				margin-top: pxToRem(34px);
 				max-width: pxToRem(630px);
